# Hydra

./: .README.md.html  AddPdfBase_8h.html  AddPdfBase_8h__dep__incl.map  AddPdfBase_8h__dep__incl.md5  AddPdfBase_8h__incl.map  AddPdfBase_8h__incl.md5  AddPdfBase_8h_source.html  AddPdfFunctor_8h.html  AddPdfFunctor_8h.js  AddPdfFunctor_8h__dep__incl.map  AddPdfFunctor_8h__dep__incl.md5  AddPdfFunctor_8h__incl.map  AddPdfFunctor_8h__incl.md5  AddPdfFunctor_8h_source.html  AddPdf_8h.html  AddPdf_8h__dep__incl.map  AddPdf_8h__dep__incl.md5  AddPdf_8h__incl.map  AddPdf_8h__incl.md5  AddPdf_8h_source.html  Algorithm_8h.html  Algorithm_8h__dep__incl.map  Algorithm_8h__dep__incl.md5  Algorithm_8h__incl.map  Algorithm_8h__incl.md5  AnalyticalIntegral_8inl.html  AnalyticalIntegral_8inl.js  AnalyticalIntegral_8inl__dep__incl.map  AnalyticalIntegral_8inl__dep__incl.md5  AnalyticalIntegral_8inl__incl.map  AnalyticalIntegral_8inl__incl.md5  ArgumentTraits_8h.html  ArgumentTraits_8h__dep__incl.map  ArgumentTraits_8h__dep__incl.md5  ArgumentTraits_8h__incl.map  ArgumentTraits_8h__incl.md5  Argument_8h.html  Argument_8h__dep__incl.map  Argument_8h__dep__incl.md5  Argument_8h__incl.map  (+10656 more)
examples/: CMakeLists.txt  Exp.h  Gauss.h  HydraEvaluateExample.cpp  HydraEvaluateExample.cu  HydraFitExample.cpp  HydraFitExample.cu  HydraFitExperimentalExample.cpp  HydraFitExperimentalExample.cu  HydraFitExperimentalExamplePerformance.cu  HydraNumericalIntegrationExample.cpp  HydraNumericalIntegrationExample.cu  HydraNumericalIntegrationGenzMalikExample.cpp  HydraNumericalIntegrationGenzMalikExample.cu  HydraPhaseSpaceExample.cpp  HydraPhaseSpaceExample.cu  HydraPhaseSpaceExperimental.cpp  HydraPhaseSpaceExperimental.cu  HydraPhaseSpacePerformance.cu  HydraRandomExample.cpp  HydraRandomExample.cu  HydraVegasNumericalIntegrationAsync.cu  HydraVegasNumericalIntegrationPerformancePlots.cu  multivector.cpp  multivector.cu
examples/NIPS_HYDRA/: CMakeLists.txt  D2KKK.cpp  D2KKK.cu  D2KKK.inl  README.md
examples/async/: CMakeLists.txt  async_mc.cu  async_mc.inl
examples/asynch/: async.cpp  async.cu  async.inl
examples/convolution/: CMakeLists.txt  convolute_functions.cpp  convolute_functions.cu  convolute_functions.inl  cufft.cpp  cufft.cu  cufft.inl  fft.cpp  fft.cu  fft.inl  fit_convoluted_pdfs.cpp  fit_convoluted_pdfs.cu  fit_convoluted_pdfs.inl
examples/fit/: CMakeLists.txt  basic_fit.cpp  basic_fit.cu  basic_fit.inl  basic_fit_range_semantics.cpp  basic_fit_range_semantics.cu  basic_fit_range_semantics.inl  binned_extended_logLL_fit.cpp  binned_extended_logLL_fit.cu  binned_extended_logLL_fit.inl  extended_logLL_fit.cpp  extended_logLL_fit.cu  extended_logLL_fit.inl  fractional_logLL_fit.cpp  fractional_logLL_fit.cu  fractional_logLL_fit.inl  multidimensional_fit.cpp  multidimensional_fit.cu  multidimensional_fit.inl  phsp_dalitz_unweighting_functor_and_fit.cpp  phsp_dalitz_unweighting_functor_and_fit.cu  phsp_dalitz_unweighting_functor_and_fit.inl  phsp_unweighting_functor_and_fit.cpp  phsp_unweighting_functor_and_fit.cu  phsp_unweighting_functor_and_fit.inl  simultaneous_fit.cpp  simultaneous_fit.cu  simultaneous_fit.inl  splot.cpp  splot.cu  splot.inl
examples/histograming/: CMakeLists.txt  dense_histogram.cpp  dense_histogram.cu  dense_histogram.inl  sparse_histogram.cpp  sparse_histogram.cu  sparse_histogram.inl  sparse_histograming.inl
examples/misc/: CMakeLists.txt  caching_functors.cpp  caching_functors.cu  caching_functors.inl  multiarray_container.cpp  multiarray_container.cu  multiarray_container.inl  multivector_container.cpp  multivector_container.cu  multivector_container.inl  quick_test.cpp  quick_test.cu  quick_test.inl  range_semantics.cpp  range_semantics.cu  range_semantics.inl  spiline2D_interpolation.cpp  spiline2D_interpolation.cu  spiline2D_interpolation.inl  spiline_interpolation.cpp  spiline_interpolation.cu  spiline_interpolation.inl  spline2D_interpolation.cpp  spline2D_interpolation.cu  spline2D_interpolation.inl  spline3D_interpolation.cpp  spline3D_interpolation.cu  spline3D_interpolation.inl  spline4D_interpolation.cpp  spline4D_interpolation.cu  spline4D_interpolation.inl  spline_interpolation.cpp  spline_interpolation.cu  spline_interpolation.inl  variant_types.cpp  variant_types.cu  variant_types.inl  zipping_iterables.cpp  zipping_iterables.cu  zipping_iterables.inl
examples/numerical_integration/: CMakeLists.txt  adaptive_gauss_kronrod.cpp  adaptive_gauss_kronrod.cu  adaptive_gauss_kronrod.inl  gauss_kronrod.cpp  gauss_kronrod.cu  gauss_kronrod.inl  genz_malik.cpp  genz_malik.cu  genz_malik.inl  plain_mc.cpp  plain_mc.cu  plain_mc.inl  vegas.cpp  vegas.cu  vegas.inl
examples/phase_space/: CMakeLists.txt  phsp_averaging_functor.cpp  phsp_averaging_functor.cu  phsp_averaging_functor.inl  phsp_basic.cpp  phsp_basic.cu  phsp_basic.inl  phsp_chain.cpp  phsp_chain.cu  phsp_chain.inl  phsp_dalitz.cpp  phsp_dalitz.cu  phsp_dalitz.inl  phsp_evaluating_functor.cpp  phsp_evaluating_functor.cu  phsp_evaluating_functor.inl  phsp_reweighting.cpp  phsp_reweighting.cu  phsp_reweighting.inl  phsp_unweighting.cpp  phsp_unweighting.cu  phsp_unweighting.inl  phsp_unweighting_functor.cpp  phsp_unweighting_functor.cu  phsp_unweighting_functor.inl  timedependent_phsp_basic.cpp  timedependent_phsp_basic.cu  timedependent_phsp_basic.inl
examples/phys/: CMakeLists.txt  dalitz_plot.cpp  (+35 more)
testing/: CMakeLists.txt  Chain.cpp  Chain.inl  Events.cu  Events.inl  Point.inl  PointVector.inl  ars_bigcrush.cpp  ars_practrand.cpp  batch_test_generator.cpp  benchmark_cbprng.cpp  lambda.inl  list_tests.cpp  list_tests.cu  list_tests.inl  main.cpp  main.cu  multivector.cu  multivector.inl  philox_bigcrush.cpp  philox_long_bigcrush.cpp  philox_long_practrand.cpp  philox_practrand.cpp  squares3_128bit_practrand.cpp  squares3_bigcrush.cpp  squares3_long_practrand.cpp  squares3_practrand.cpp  squares4_bigcrush.cpp  squares4_long_practrand.cpp  squares4_practrand.cpp  threefry_bigcrush.cpp  threefry_long_bigcrush.cpp  threefry_long_practrand.cpp  threefry_practrand.cpp  timing_baseline.cpp  unit_tests.cu
(+7389 files in other folders)
